src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

#root {
    background-color: #161718;
    height: 100vh;
    overflow-x: hidden;
    overflow-y: hidden;
}

#tree {
    will-change: transform;
}

.apple {
    will-change: transform, scale;
    flex-basis: 33%;
}

.tree-shake-anim {
    animation: treeShaker 1.8s;
    animation-iteration-count: infinite;
    animation-timing-function: steps(6, end);
}

.apple-shake-anim {
    animation: treeShaker 1.8s;
    animation-iteration-count: infinite;
    animation-timing-function: steps(6, end);
    animation-delay: 0.05s;
}

.apple-start-anim {
    animation: scaleUp 0.8s steps(21, end);
    backface-visibility: hidden;
}

@keyframes treeShaker {
    0% {
        transform: translateX(0);
    }
    10%,
    30%,
    50%,
    70%,
    90% {
        transform: translateX(-10px);
    }
    20%,
    40%,
    60%,
    80% {
        transform: translateX(10px);
    }
    100% {
        transform: translateX(0);
    }
}

@keyframes shake {
    0% {
        transform: translate(4px, 1px) rotate(0deg);
    }
    10% {
        transform: translate(-4px, -1px) rotate(-1deg);
    }
    20% {
        transform: translate(-5px, 0px) rotate(1deg);
    }
    30% {
        transform: translate(5px, 1px) rotate(0deg);
    }
    40% {
        transform: translate(5px, -1px) rotate(1deg);
    }
    50% {
        transform: translate(-5px, 2px) rotate(-1deg);
    }
    60% {
        transform: translate(-5px, 1px) rotate(0deg);
    }
    70% {
        transform: translate(5px, 1px) rotate(-1deg);
    }
    80% {
        transform: translate(-5px, -1px) rotate(1deg);
    }
    90% {
        transform: translate(5px, 2px) rotate(0deg);
    }
    100% {
        transform: translate(5px, -2px) rotate(-1deg);
    }
}

@keyframes scaleUp {
    from {
        transform: scale(0.1);
    }
    to {
        transform: scale(1);
    }
}

